FormSubsets.java solved